export interface JobRole {
  readonly jobRoleId: number
  readonly name: string
}
